# PlanarAllyPlus

./: .gitignore  CHANGELOG.md  Dockerfile  README.it.md  README.md  docker-compose.cosmos.json  docker-compose.cosmos.yml  docker-compose.hub.yml  docker-compose.portainer.yml  docker-compose.yml
.github/workflows/: codeql-analysis.yml  docker.yml  launcher-release.yml
client/: index.html  package-lock.json  package.json  tsconfig.json
client/patches/: vue3-pdf-app+1.0.3.patch
client/src/: apiTypes.ts  fa.ts  invitation.ts  main.ts
client/test/: helpers.ts
docs/: COMPENDIUM_GUIDE.md  EXTENSIONS_DEVELOPER_GUIDE.md  EXTENSIONS_DEVELOPER_GUIDE_EN.md  EXTENSIONS_PLAN.md
extensions/Guida/: README.md  extension.toml  fix-docs-links.js  fix-docs-paths-v2.js  fix-docs-paths-v3.js
extensions/aigenerator/: extension.toml
extensions/ambient-music/: extension.toml
extensions/assets-installer/: extension.toml
extensions/character-sheet/: extension.toml
extensions/compendium/: README.md  extension.toml
extensions/documents/: extension.toml
extensions/dungeongen-main/: extension.toml
extensions/openrouter/: extension.toml
launcher/: .gitignore  README.it.md  README.md  i18n.js  index.html  main.js  package-lock.json  package.json  styles.css  vite.config.js
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/icons/: icon.icns
launcher/src-tauri/src/: lib.rs
scripts/: docker-push.sh  run.bat  run.ps1  run.sh  start-server.bat  start-server.sh
server/: index.html  pyproject.toml  test_walls.py  test_walls_2.py
server/src/: app.py  (+5 more)
(+446 files in other folders)
